tests/NormalTests/paczka1/fuzzy1/81084388.err
Error in line 1: AjIPqQJ5 A50 45,76
Error in line 2: AjIPqQJ5 S544 52,7
Error in line 5: AjIPqQJ5 S268 3,0
Error in line 19: 26vX0hIE S544 56,2
Error in line 28: AjIPqQJ5 S544 6,,9
Error in line 29: 57uc A50 4,2
Error in line 38: mXe A50 45,2
